fluxcd/apps/base/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    enable-backup: "true"
  annotations:
    linkerd.io/inject: enabled
